# Aether

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt-run.yml  deploy.yml
api/: Dockerfile  main.py  requirements.txt
api/cache/: redis_cache.py
api/graphql/: schema.py
api/secrets/: secret_manager.py
data_quality/: __init__.py  expectations.py  validations.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/gold/: gold_hourly_sentiment.sql  gold_latest_sentiment.sql
dbt/models/staging/: stg_market_data.sql
dbt/tests/: assert_sentiment_score_valid_range.sql
functions/market_processor/: main.py  requirements.txt
infra/: Pulumi.yaml  __main__.py  requirements.txt
kafka/: consumer.py
observability/: __init__.py  logging.py  metrics.py  prometheus.yml  requirements.txt  tracing.py
streaming/: websocket_server.py
terraform/: main.tf  variables.tf
tests/: __init__.py  requirements.txt
tests/integration/: test_api.py
