[project]
name = "aether"
version = "2.0.0"
description = "Serverless Data Lakehouse on GCP with AI-Powered Market Intelligence"
authors = [
    {name = "Adam", email = "adam@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

keywords = [
    "gcp",
    "bigquery",
    "pubsub",
    "vertex-ai",
    "pinecone",
    "fastapi",
    "dbt",
    "pulumi",
    "terraform",
    "kafka",
    "data-engineering",
    "mlops",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/adxmrxk/Aether"
Repository = "https://github.com/adxmrxk/Aether.git"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=api --cov=functions --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["api", "functions", "observability", "data_quality"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["api", "functions"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
